--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div style="margin-bottom: 2%;">
       <button id="majorScale">Major Scale</button>
       <button id="noScale">Chromatic</button>
-      <button id="minorScale">minor Scale</button>
+      <button id="minorScale">Minor Scale</button>
       <button id="majorPentScale">Major Pentatonic</button>
       <button id="minorPentScale">Minor Pentatonic</button>
 
