--- a/index.html
+++ b/index.html
@@ -63,12 +63,7 @@
       </p1>
   </div>
   <div style="margin-bottom: 2%;">
-    <p2>By the time you read this Canvas will have told you I submitted this assignment late but that was because I didnt expext half of the
-      issues that I faced when I started this project.
-    </p2>
-  </div>
-  <div style="margin-bottom: 2%;">
-   <p3>I hope everything works by the time you open this aswell - Quinn Allemand-</p3>
+   <p3>I hope everything works by the time you open this - Quinn Allemand-</p3>
   </div>
   </body>
 </html>
